objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank of Internet</fullName>
                </value>
                <value>
                    <fullName>Bank X</fullName>
                </value>
                <value>
                    <fullName>BofI Advisor</fullName>
                </value>
                <value>
                    <fullName>BofI Federal Bank</fullName>
                </value>
                <value>
                    <fullName>Nat&apos;l Wild Turkey Federation</fullName>
                </value>
                <value>
                    <fullName>Specialty Deposits</fullName>
                </value>
                <value>
                    <fullName>UFB Direct</fullName>
                </value>
                <value>
                    <fullName>Virtus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Home Equity</fullName>
                </value>
                <value>
                    <fullName>MF Mtgs</fullName>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
                <value>
                    <fullName>ODL</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RV/AUTO</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>SF Mtgs</fullName>
                </value>
                <value>
                    <fullName>Specialty Financing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JH_Product_Id_SFDC2__c</fullName>
        <externalId>true</externalId>
        <label>JH Product ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pric__c</fullName>
        <label>Revenue Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Class__c</fullName>
        <label>Sub-Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Money Market Savings</fullName>
                </value>
                <value>
                    <fullName>Select CD</fullName>
                </value>
                <value>
                    <fullName>Select Checking</fullName>
                </value>
                <value>
                    <fullName>Select Money Market Savings</fullName>
                </value>
                <value>
                    <fullName>Select Savings</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Personal CD</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>High Interest Checking</fullName>
                </value>
                <value>
                    <fullName>High Yield Savings</fullName>
                </value>
                <value>
                    <fullName>Legacy Account</fullName>
                </value>
                <value>
                    <fullName>Special CD</fullName>
                </value>
                <value>
                    <fullName>RV/AUTO</fullName>
                </value>
                <value>
                    <fullName>RV INDIRECT</fullName>
                </value>
                <value>
                    <fullName>DIRECT RV</fullName>
                </value>
                <value>
                    <fullName>COMMERCIAL</fullName>
                </value>
                <value>
                    <fullName>RE/COMM ADJ-INHOUSE</fullName>
                </value>
                <value>
                    <fullName>OVERDRAFT LOC</fullName>
                </value>
                <value>
                    <fullName>MULTI FAMILY</fullName>
                </value>
                <value>
                    <fullName>P-MULTI 5+ ADJ SBO</fullName>
                </value>
                <value>
                    <fullName>MULTI 5+ NEG AM INS</fullName>
                </value>
                <value>
                    <fullName>P-MULTI 5+ P&amp;I SBO</fullName>
                </value>
                <value>
                    <fullName>SINGLE FAMLIY RES</fullName>
                </value>
                <value>
                    <fullName>SINGLE FAMILY RES</fullName>
                </value>
                <value>
                    <fullName>PUR-SINGLE FAMILY RE</fullName>
                </value>
                <value>
                    <fullName>HOME EQUITY</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>